Fix dev and prod deploy

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <body class="is-preload">
     <div id="root"></div>
     
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="src/main.tsx"></script>
     
-    <script src="src/assets/js/jquery.min.js"></script>
-    <script src="src/assets/js/jquery.scrollex.min.js"></script>
-    <script src="src/assets/js/browser.min.js"></script>
-    <script src="src/assets/js/breakpoints.min.js"></script>
-    <script src="src/assets/js/util.js"></script>
-    <script src="src/assets/js/main.js"></script>
+    <script src="/jquery.min.js"></script>
+    <script src="/jquery.scrollex.min.js"></script>
+    <script src="/browser.min.js"></script>
+    <script src="/breakpoints.min.js"></script>
+    <script src="/util.js"></script>
+    <script src="/main.js"></script>
   </body>
 </html>
