--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <title>Blu-Moon Driving School</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="src/assets/css/main.css" />
-    <link rel="stylesheet" href="src/assets/css/fontawesome-all.min.css" />
-		<noscript><link rel="stylesheet" href="src/assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/fontawesome-all.min.css" />
+		<noscript><link rel="stylesheet" href="/css/noscript.css" /></noscript>
   </head>
   <body class="is-preload">
     <div id="root"></div>
     
     <script type="module" src="src/main.tsx"></script>
     
-    <script src="/jquery.min.js"></script>
-    <script src="/jquery.scrollex.min.js"></script>
-    <script src="/browser.min.js"></script>
-    <script src="/breakpoints.min.js"></script>
-    <script src="/util.js"></script>
-    <script src="/main.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/jquery.scrollex.min.js"></script>
+    <script src="/js/browser.min.js"></script>
+    <script src="/js/breakpoints.min.js"></script>
+    <script src="/js/util.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
