Fixing send email and some layout things

--- a/New folder/index.html
+++ b/New folder/index.html
@@ -9,8 +9,8 @@
 		<title>Blu-Moon Driving School</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../public/css/main.css" />
+		<noscript><link rel="stylesheet" href="../public/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -168,12 +168,12 @@ keep you safe on today’s roads.</p>
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../public/js/jquery.min.js"></script>
+			<script src="../public/js/jquery.scrollex.min.js"></script>
+			<script src="../public/js/browser.min.js"></script>
+			<script src="../public/js/breakpoints.min.js"></script>
+			<script src="../public/js/util.js"></script>
+			<script src="../public/js/main.js"></script>
 
 	</body>
 </html>
