--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/fontawesome-all.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
+
 		<noscript><link rel="stylesheet" href="/css/noscript.css" /></noscript>
   </head>
   <body class="is-preload">
