--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
           var currentPath = window.location.pathname;
       
           // Redirect to a desired target URL, appending the current path
-          window.location.href = "https://blumoondriving.com/" + currentPath;
+          window.location.href = "https://blumoondriving.com" + currentPath;
         };
       </script>
 </head>
