--- a/index.html
+++ b/index.html
@@ -11,6 +11,31 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
 
+
+    <meta name="description" content="Blu-Moon Driving School based out of Columbia, MD, helping new and existing drivers get on the road with confidence.">
+    <meta name="keywords" content="blu, blu-moon, blumoon, driving, drive, school, bluemoon, blue moon, blu moon, driver, drive, education, basic, advance, premium, refresher, course, krishna, krish, khatiwada, baltimore, maryland, behind the wheel, btw, BTW">
+    <link rel="author" href="Krishna Khatiwada" />
+    <link rel="canonical" href="blumoondriving.com" />
+
+
+    <meta property="og:url" content="https://blumoondriving.com">
+    <meta property="og:image" content="/images/logo.png">
+    <meta property="og:description" content="Blu-Moon Driving School based out of Columbia, MD, helping new and existing drivers get on the road with confidence.">
+    <meta property="og:title" content="Blu-Moon Driving School">
+    <meta property="og:site_name" content="BluMoonDriving">
+    <meta property="og:see_also" content="https://www.blumoondriving.com">
+
+    <meta itemprop="name" content="Blu-Moon Driving">
+    <meta itemprop="description" content="Blu-Moon Driving School based out of Columbia, MD, helping new and existing drivers get on the road with confidence.">
+    <meta itemprop="image" content="/images/logo.png">
+
+    <meta name="twitter:card" content="Blu-Moon Driving School">
+    <meta name="twitter:url" content="https://blumoondriving.com/">
+    <meta name="twitter:title" content="Blu-Moon Driving School">
+    <meta name="twitter:description" content="Blu-Moon Driving School based out of Columbia, MD, helping new and existing drivers get on the road with confidence.">
+    <meta name="twitter:image" content="/images/logo.png">
+
+
 		<noscript><link rel="stylesheet" href="/css/noscript.css" /></noscript>
   </head>
   <body class="is-preload">
