--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/images/logo.png" />
     <title>Blu-Moon Driving School</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/fontawesome-all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
